manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naman-portfolio
  namespace: apps
  labels:
    app: naman-portfolio
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naman-portfolio
  template:
    metadata:
      labels:
        app: naman-portfolio
        component: backend
    spec:
      containers:
        - name: frontend
          image: registry.kahitoz.com/naman-portfolio:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "0.1"
              memory: "100Mi"
            limits:
              cpu: "0.2"
              memory: "500Mi"
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
      imagePullSecrets:
        - name: regcred
