manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: naman-portfolio
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: halfskirmish.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: naman-portfolio
                port:
                  number: 5000
